# eduai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/auth/: router.py  schemas.py  service.py
app/api/content/: chunker.py  parser.py  router.py  schemas.py  service.py
app/api/courses/: router.py  schemas.py  service.py
app/api/flashcards/: router.py  schemas.py  service.py
app/api/mastery/: router.py  schemas.py  service.py
app/api/reviews/: router.py  schemas.py  service.py
app/api/sessions/: handler.py  router.py  schemas.py  service.py
app/api/users/: router.py  schemas.py  service.py
app/core/: config.py  database.py  exception_handlers.py  exceptions.py  redis.py  security.py
app/models/: __init__.py  base.py  card_review.py  content_source.py  course.py  flashcard.py  mastery_score.py  study_session.py  user.py
app/services/ai/: base.py  llm_client.py  prompts.py
app/services/cache/: base.py  redis_cache.py
app/services/srs/: base.py  sm2.py
app/services/storage/: base.py  local_storage.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  tokens.ts
frontend/src/pages/: AuthPage.tsx  CoursePage.tsx  CoursesPage.tsx  StudyPage.tsx
frontend/src/store/: auth.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
